reconfigured base app version

--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -8,3 +8,31 @@
         max-width: 320px;
     }
 }
+
+.Login {
+    text-align: center;
+}
+
+.Login-header {
+    background-color: #F32A2A;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
+}
+
+.Login-link {
+    color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
