--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -13,6 +13,11 @@
     text-align: center;
 }
 
+.App-logo {
+    animation: App-logo-spin infinite 20s linear;
+    height: 40vmin;
+}
+
 .Login-header {
     background-color: #F32A2A;
     min-height: 100vh;
